# project-loom

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  LICENSE  PROJECT-STANCE.md  Project_Loom_v3.md  README.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  telemetry-streaming-spec.md
.github/workflows/: docker-publish.yml
.kiro/hooks/: code-review-writes.kiro.hook  post-task-docs.kiro.hook  prompt-reminders.kiro.hook  rust-build-verify.kiro.hook  rust-lint-on-save.kiro.hook  secret-scan-writes.kiro.hook  test-after-task.kiro.hook  ts-build-verify.kiro.hook  ts-lint-on-save.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: auth-security-checklist.md  learning-mcp.md  learning-pgvector.md  project-overview.md  rust-conventions.md  security-practices.md  sql-conventions.md  testing-conventions.md  typescript-conventions.md
bootstrap/: README.md  chatgpt_parser.py  claude_ai_parser.py  claude_code_parser.py  github_copilot_parser.py  loom_http.py  m365_copilot_parser.py  schema_assertions.py
cli/: loom-seed.py
docker/postgres/: init-extensions.sql
docs/adr/: 000-template.md  001-postgresql-single-store.md  002-local-llm-inference.md  003-namespace-isolation.md  004-ingestion-modes.md  005-verbatim-content-invariant.md  (+7 more)
loom-dashboard/: Dockerfile  biome.json  index.html  package-lock.json  package.json  vite.config.ts
loom-engine/: .clippy.args  Cargo.toml  Dockerfile  clippy.toml  rustfmt.toml
loom-engine/.cargo/: audit.toml
loom-engine/.config/: nextest.toml
loom-engine/migrations/: 001_episodes.sql  002_entities.sql  003_predicate_packs.sql  004_predicates.sql  005_facts.sql  006_procedures.sql  007_resolution_conflicts.sql  008_namespace_config.sql  009_audit_log.sql  010_snapshots.sql  011_traverse_function.sql  012_seed_core_predicates.sql  013_seed_grc_pack.sql  014_benchmarks.sql  015_ingestion_mode.sql  016_episode_processing_state.sql  017_retry_idempotency.sql  018_knowledge_summaries.sql  019_consolidation_log.sql  020_decay_tracking.sql
loom-engine/prompts/: classification.txt  consolidation.txt  entity_extraction.txt  fact_extraction.txt
loom-engine/seed/benchmark/: 01-debug-auth-failure.md  02-debug-memory-leak.md  03-arch-service-topology.md  04-arch-data-flow.md  05-compliance-gdpr.md  06-compliance-access-review.md  08-writing-runbook.md  10-chat-team-ownership.md  README.md
loom-engine/src/: config.rs  crypto.rs  lib.rs  main.rs
loom-engine/src/api/: auth.rs  dashboard.rs  mcp.rs  mcp_rpc.rs  mod.rs  rest.rs
loom-engine/src/db/: audit.rs  consolidation.rs  dashboard.rs  entities.rs  episodes.rs  facts.rs  mod.rs  pool.rs  predicates.rs  procedures.rs  snapshots.rs  traverse.rs
loom-engine/src/llm/: classification.rs  client.rs  embeddings.rs  extraction.rs  mod.rs
loom-engine/src/pipeline/: benchmark.rs  mod.rs
loom-engine/src/pipeline/offline/: extract.rs  ingest.rs  mod.rs  procedures.rs  resolve.rs  state.rs  supersede.rs
loom-engine/src/pipeline/online/: classify.rs  compile.rs  mod.rs  namespace.rs  rank.rs  retrieve.rs  weight.rs
loom-engine/src/telemetry/: mod.rs  sampler.rs  state.rs
loom-engine/src/types/: audit.rs  benchmark.rs  classification.rs  compilation.rs  consolidation.rs  entity.rs  episode.rs  fact.rs  ingestion.rs  mcp.rs  mod.rs  predicate.rs  summary.rs
loom-engine/src/worker/: consolidator.rs  mod.rs  processor.rs  scheduler.rs
loom-engine/tests/: api_rest_dashboard.rs  db_query_layer.rs  error_handling.rs  integration_full_system.rs  mcp_rpc.rs  performance_monitoring.rs  performance_targets.rs  property_additional_validation.rs  property_background_worker.rs  property_dashboard_api.rs  property_embedding_dimensions.rs  property_entity_resolution.rs  property_fact_extraction.rs  property_mcp_endpoints.rs  property_namespace_isolation.rs  property_online_pipeline.rs  property_schema_constraints.rs  property_soft_deletion.rs
templates/: CLAUDE.md  README.md  chatgpt_custom_instructions.md  claude_desktop_config.example.json  claude_desktop_projects_instructions.md  github_copilot_instructions.md  loom-capture.sh  m365_copilot_agent_manifest.example.json  m365_copilot_instructions.md  vscode_mcp.example.json
(+43 files in other folders)
