[package]
name = "loom-engine"
version = "0.1.0"
edition = "2021"
description = "A PostgreSQL-native memory compiler for AI workflows"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
# default-features = false drops the `any` feature that pulls in sqlx-mysql +
# sqlx-sqlite (and transitively `rsa` via sqlx-mysql). Loom is Postgres-only;
# opting out removes the RUSTSEC-2023-0071 attack surface entirely even though
# the vulnerable code path is never reached at runtime.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
pgvector = { version = "0.4", features = ["sqlx"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenvy = "0.15"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
wiremock = "0.6"
fake = { version = "5", features = ["derive"] }
assert_matches = "1.5"
